--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "BetaPeak\\GoDaddy\\Tests\\": "tests"
+      "BetaPeak\\GoDaddy\\Tests\\": "tests/"
     }
   },
   "scripts": {
