--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   ],
   "require": {
     "php": ">=7.0",
-    "illuminate/support": "~5.3.0|~5.4.0|~5.5.0|~5.6.0|~5.7.0|~5.8.0|~6.0.0|~7.0.0|~8.*",
+    "illuminate/support": "~5.3.0|~5.4.0|~5.5.0|~5.6.0|~5.7.0|~5.8.0|~6.0.0|~7.0.0|~8.0.0",
     "gellu/godaddy-api-client": "^1.1"
   },
   "require-dev": {
