--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,12 @@
     "phpunit/phpunit": "5.*",
     "orchestra/testbench": "~3.3.0|~3.4.0|~5.5.0"
   },
+  "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/hexpit/godaddy-api-client.git"
+        }
+    ],
   "autoload": {
     "psr-4": {
       "BetaPeak\\GoDaddy\\": "src/"
